# GoogleCalender-Schedule-Manager

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
server/: .dockerignore  Dockerfile  auth.py  calendar_service.py  main.py  pyproject.toml  requirements.txt
